--- a/SortingEfficiency/SortingEfficiency.csproj
+++ b/SortingEfficiency/SortingEfficiency.csproj
@@ -43,8 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Messing.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sorters.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
